page content centered

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/css/bootstrap.css">
-    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>pingpong</title>
   </head>
   <body>
@@ -24,7 +24,7 @@
   <label for="ping">pingpong</label>
   <input id="index" type="text">
 </div>
-  <button type="submit">submit</button>
+  <button type="submit">ping it!</button>
   </form>
 <div id="result">
   <ul class="answers">
