--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
     <title>pingpong</title>
   </head>
   <body>
@@ -21,10 +22,10 @@
 </ol>
 <form id="pingpong">
   <div class="form-group">
-  <label for="ping">pingpong</label>
+  <label for="ping"><button type="submit" class="butn1"><img class="butn2" src="img/doing2.jpg" alt="play"></button></label>
   <input id="index" type="text">
 </div>
-  <button type="submit">ping it!</button>
+  
   </form>
 <div id="result">
   <ul class="answers">
